https://github.com/Viktoriiia/HW_Part1.git

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ Lesson7/HW7_Sort_Queue/HW7_Sort_Queue/bin*/
 Lesson7/HW7_Sort_Queue/HW7_Sort_Queue/obj*/
 Lesson9/HW9_Dynamic/HW9_Dynamic/bin*/
 Lesson9/HW9_Dynamic/HW9_Dynamic/obj*/
+Lesson15/HW_15/HW_15/bin*/
+Lesson15/HW_15/HW_15/obj*/
+Lesson15/HW_15/StackAndQueue/bin*/
+Lesson15/HW_15/StackAndQueue/obj*/
